# trans_data_app

./: .devenv.flake.nix  .gitignore  Cargo.toml  Makefile.toml  Rocket.toml  devenv.nix  diesel.toml
api/: Cargo.toml
api/src/handlers/: user.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/session/: mod.rs
application/src/users/: create.rs  read.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
migrations/2024-10-14-122753_create_users/: down.sql  up.sql
migrations/2024-10-14-205642_create_session/: up.sql
shared/: Cargo.toml
shared/src/: ids.rs  lib.rs  responses.rs
web/: package.json  pnpm-lock.yaml
web/src/routes/: +page.svelte  +page.ts
web/src/routes/about/: +page.svelte
