[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket_sync_db_pools = { version = "0.1.0", features = [
    "diesel_postgres_pool",
] }
diesel = { version = "2.1.6", features = ["postgres", "uuid"] }
domain = { version = "0.1.0", path = "../domain" }
infrastructure = { version = "0.1.0", path = "../infrastructure" }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.128"
shared = { version = "0.1.0", path = "../shared" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
